tests/trybuild-failures/not_comparison.stderr
error: proc-macro derive panicked
 --> $DIR/not_comparison.rs:4:5
  |
4 |     assertify!(1 + 2);
  |     ^^^^^^^^^^^^^^^^^^
  |
  = help: message: Expected comparison operator
  = note: this warning originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
